added SSL option
Updated config file and R script to have user option for ssl peer verification

--- a/config_default.yml
+++ b/config_default.yml
@@ -3,3 +3,5 @@ default:
 # if you need to authenticate on your fhir server, set username and password
   username:        NULL
   password:        NULL
+## TRUE = peer verification anschalten, FALSE = peer verification ausschalten   
+  ssl_verify_peer: TRUE
