Added a proxy option in config

--- a/config_default.yml
+++ b/config_default.yml
@@ -5,3 +5,7 @@ default:
   password:        NULL
 ## TRUE = peer verification anschalten, FALSE = peer verification ausschalten   
   ssl_verify_peer: TRUE
+##Proxy configs
+  http_proxy: ""
+  https_proxy: ""
+  no_proxy: ""
