--- a/step2/docker-compose.yml
+++ b/step2/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - ./errors:/errors
       - ./data:/data
       - ./results:/results
+      - ./conf:/conf
       - ./config.yml:/config.yml
     #      - ./localca.pem:/usr/local/share/ca-certificates/localca.crt
     image: "nandhinis08/projectathon6-miracum1-step2"
