"fix:for issue #17 & changes from master branch as well"

--- a/step2/Dockerfile
+++ b/step2/Dockerfile
@@ -1,5 +1,6 @@
 FROM rocker/r-ver:latest
 
+
 # MAINTAINER Nandhini Santhanam <nandhini.santhanam@medma.uni-heidelberg.de>
 LABEL Description="PJT#6 miracum1 step2"
 LABEL Maintainer="nandhini.santhanam@medma.uni-heidelberg.de"
@@ -7,8 +8,6 @@ LABEL Maintainer="nandhini.santhanam@medma.uni-heidelberg.de"
 ## build ARGs
 ARG NCPUS=${NCPUS:--1}
 
-ENV http_proxy http://proxy.klima.ads.local:2080/
-ENV https_proxy http://proxy.klima.ads.local:2080/
 
 RUN mkdir -p /Ergebnisse && \
   mkdir -p /errors && \
@@ -23,24 +22,21 @@ RUN apt-get update -qq && apt-get install -y --no-install-recommends \
   libgdal-dev \
   libgeos-dev \ 
   libproj-dev \
+  default-jdk \
+  r-cran-rjava \
   uuid-dev && \
   ## clear caches:
   rm -rf /var/lib/apt/lists/* && \
   rm -rf /tmp/* && \
   apt-get clean && apt-get autoclean && apt-get autoremove -y
+  
+  
+RUN R -e "install.packages(c('fhircrackr', 'config', 'dplyr', 'zoo', 'stringr', 'tidyr', 'data.table', 'openxlsx', 'rdwd', 'lubridate', 'geosphere', 'stringi', 'caret', 'ranger', 'mboost','tidyverse', 'corrplot', 'earth', 'Metrics', 'ggplot2', 'RANN', 'pacman'), dependencies = TRUE, repos='https://cloud.r-project.org/')"
 
-RUN install2.r --error --deps TRUE --skipinstalled -n $NCPUS \
-  fhircrackr \
-  config \
-  dplyr \
-  zoo \
-  stringr \
-  tidyr \
-  data.table \
-  openxlsx && \
-  ## clear caches:
-  rm -rf /tmp/downloaded_packages && \
-  rm -rf /var/lib/apt/lists/*
+
+
+
+
 
 # COPY config_default.yml config_default.yml
 COPY 1_install_r_packages.R 1_install_r_packages.R
@@ -49,6 +45,7 @@ COPY 3_feature_extraction.R 3_feature_extraction.R
 COPY 4_modeling1_fixedwindow_false.R 4_modeling1_fixedwindow_false.R
 COPY 5_modeling2_fixedwindow_true.R 5_modeling2_fixedwindow_true.R
 COPY 6_modeling3_gamboost.R 6_modeling3_gamboost.R
+COPY customRF.R customRF.R
 COPY execution.R execution.R
 
 
